[gd_scene load_steps=6 format=3 uid="uid://bxwy0r2ydmwky"]

[ext_resource type="SpriteFrames" uid="uid://c6odp0uge3uld" path="res://res/animations/mc.tres" id="1_jg6rk"]
[ext_resource type="Script" path="res://src/Player/AnimationController.gd" id="2_86hkp"]
[ext_resource type="Script" path="res://src/Player/InputHandler.gd" id="2_bu4xx"]
[ext_resource type="Script" path="res://src/Player/PhysicsController.gd" id="2_xl6pr"]
[ext_resource type="Script" path="res://src/Player/StateManager.gd" id="5_v0r5p"]

[node name="PlayerRoot" type="Node2D"]

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_jg6rk")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.873584

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PhysicsController" type="Node" parent="."]
script = ExtResource("2_xl6pr")

[node name="AnimationController" type="Node" parent="."]
script = ExtResource("2_86hkp")

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("2_bu4xx")

[node name="StateManager" type="Node" parent="."]
script = ExtResource("5_v0r5p")
